--- a/time.css
+++ b/time.css
@@ -1,19 +1,52 @@
+html, body {
+    overflow: hidden;
+}
+
 body {
     font-family: 'Mulish', sans-serif;
     background-color: darkslategray;
     color: #FFF;
 }
 
+div.container {
+    z-index: 100;
+}
+
+div.center {
+    text-align: center;
+}
+
 .time {
-    font-size: 6em;
-    text-align: center;
+    font-size: 3vw;
 }
 
-div.title {
-    font-size: 2em;
-    text-align: center;
+.time.small {
+    font-size: 2vw;
 }
 
-#footer {
-    text-align: center;
+h1, h2 {
+    color: rgb(249 132 135);
+}
+
+h1 {
+    font-size: 2vw;
+}
+
+h2 {
+    margin-top: 5%;
+    font-size: 1vw;
+}
+
+select {
+    color: #000 !important;
+}
+
+#controls {
+    margin-top: 5%;
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    z-index: 1;
 }
