--- a/time.css
+++ b/time.css
@@ -1,3 +1,4 @@
+
 html, body {
     overflow: hidden;
 }
@@ -6,6 +7,7 @@ body {
     font-family: 'Mulish', sans-serif;
     background-color: darkslategray;
     color: #FFF;
+    font-size: 30px;
 }
 
 div.container {
@@ -17,11 +19,11 @@ div.center {
 }
 
 .time {
-    font-size: 3vw;
+    font-size: 2em;
 }
 
 .time.small {
-    font-size: 2vw;
+    font-size: 1.5em;
 }
 
 h1, h2 {
@@ -29,12 +31,16 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 2vw;
+    font-size: 2em;
 }
 
 h2 {
     margin-top: 5%;
-    font-size: 1vw;
+    font-size: 1.5em;
+}
+
+#footer p {
+    font-size: 0.5em;
 }
 
 select {
@@ -43,10 +49,13 @@ select {
 
 #controls {
     margin-top: 5%;
+    font-size: 0.5em;
 }
 
 canvas {
     position: absolute;
     top: 0;
     z-index: 1;
+    height: 100%;
+    width: 100%;
 }
